--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -10,8 +10,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ecommerce.db",
-    "IdentityConnection": "Data Source=identity.db",
-    "Redis": "localhost"
+    "DefaultConnection": "Server=db; Port=3306; Database=ECommerceDB; Uid=root;Pwd=example;",
+    "IdentityConnection": "Server=db; Port=3306; Database=IdentityDB; Uid=root;Pwd=example;",
+    "Redis": "redis_image"
   }
 }
