--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     build:
       context: .
       dockerfile: API/Dockerfile
+    volumes:
+      - ./:/var/www
     ports:
       - "5000:80"
 
